[package]
name = "state-transition"
version = "0.1.0"
edition = "2024"

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
game-core = { path = "../../../game/core", features = ["serde", "zkvm"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
# RISC0-accelerated SHA-256 (hardware-accelerated in zkVM)
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
